fix [#32490] Compsitor crashes on missing OpenEXR multilayer files